# ServerIPC

./: .gitignore  .gitmodules  .polyscope.ini  .pre-commit-config.yaml  README.md  asv.conf.json  client.py  docker-compose.yml  imgui.ini  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirement-dex.txt  requirements-dex.txt  requirements.txt  run.py  uv_poetry_install.sh
.github/workflows/: coverage.yml  docs.yml  tests.yml
ServerSimple/: requirement.txt  server.py
Simulation/: README.md  docker-compose.yml  imgui.ini  requirements.txt  run.py
Simulation/meshes/: rectangle copy.mesh
Simulation/scenario/: rectangle copy.json  rectangle.json  spike.json
Simulation/simulation/: Dockerfile  args.py  initialization.py  loop.py  requirements.txt  server.py
Simulation/simulation/contact/: barrier_initializer.py  barrier_updater.py  ccd.py  extract.py
Simulation/simulation/core/: __init__.py  gradient.py  hessian.py  parameters.py  potential.py
Simulation/simulation/materials/: __init__.py  materials.py
Simulation/simulation/net_interface/: redis_client.py
Simulation/simulation/redis_interface/: redis_client.py
Simulation/simulation/solvers/: line_search.py  linear_solver.py  newton.py
Simulation/simulation/utils/: config.py  (+4 more)
Simulation/visualization/: application.py  client.py  config.json  mesh_manager.py  minio_client.py  redis_client.py  requirements.txt  screenshot_manager.py  visualizer.py
benchmarks/: README.md  integrator_benchmark.py  solver_benchmarks.py
boards/: events.out.tfevents.1733175219.LOGTI050119.16803.0  events.out.tfevents.1733175253.LOGTI050119.24728.0  events.out.tfevents.1733175298.LOGTI050119.29136.0  events.out.tfevents.1733175312.LOGTI050119.31573.0  events.out.tfevents.1733175568.LOGTI050119.83342.0  events.out.tfevents.1733175760.LOGTI050119.30262.0
docs/: code_of_conduct.md  contributing.md  coverage.md  cuda.md  index.md  installation.md  refs.bib  requirements.txt
experiements/: imgui.ini  ipc.py
meshes/: Cube.001.msh  Cube.msh  plat_tetra.msh  plate-simple-spike-3-smaller.001_.msh  plate-simple-spike-3-smaller_.msh  rectangle.mesh  tetra.msh
notebooks/: face_cal_area.ipynb  friction calculator.ipynb
notebooks/ai/: Custom_AI_Materials.ipynb  Materials_Exploration.ipynb  RandomForestRegressor_AI_Materials.ipynb  SVG_AI_Materials.ipynb
notebooks/distribute/: ray.ipynb
notebooks/friction/: friction calculator.ipynb
notebooks/heightmap/: downlaod_all_hm.ipynb  fractals_surface.ipynb  hm.ipynb  hm_nano.ipynb  hm_nano_plotly.ipynb  rough_surface_nanometers.stl  view.ipynb
notebooks/ode/: neuralode.ipynb
notebooks/performance/: chebyshev.ipynb  newton.ipynb  pcg.ipynb  pgs.ipynb  preconditioner.ipynb
notebooks/polyfem/: script.ipynb
notebooks/selector/: export_data.json  imgui.ini  points_selector.ipynb  surface_selector.ipynb
notebooks/surfaces/: 1D.ipynb  3D.ipynb  face.ipynb  face_cal_area.ipynb  imgui.ini  interpenetrating.ipynb  intersection_triangle.ipynb  tetra1.stl  tetra2.stl
notebooks/tensorboard/: simulation_metrics_visualization.ipynb
notebooks/tetwild/: meshing_fem.ipynb
runs/Dec02_16-38-52_LOGTI050119/: events.out.tfevents.1733175532.LOGTI050119.77322.0
runs/Dec02_16-39-08_LOGTI050119/: events.out.tfevents.1733175548.LOGTI050119.80291.0
scenario/: rectangle.json
simulation/: Dockerfile  init.py  initializer.py  loop.py  manager.py  requirements.txt  server.py
simulation/backend/: backend.py  factory.py  redis.py  websocket.py
simulation/board/: board.py  factory.py  grafana.py
simulation/config/: config.py
simulation/controller/: command.py  commands.py  dispatcher.py  encoding.py  errors.py  factory.py  handler.py  history.py  model.py  request.py  response.py
simulation/core/: integrator.py  parameters.py
simulation/db/: db.py  factory.py  influxdb.py  mysql.py  postgres.py  prisma.py  prismadb.py  schema.prisma
simulation/generate/: factory.py  functions.py  generate.py  noise.py
simulation/io/: io.py
simulation/logs/: error.py  message.py
simulation/nets/: factory.py  grpc.py  messages.py  nets.py  redis.py  websocket.py
simulation/states/: state.py
simulation/storage/: factory.py  local.py  storage.py
storage/boards/: events.out.tfevents.1733175645.LOGTI050119.99939.0  events.out.tfevents.1733175785.LOGTI050119.34669.0  events.out.tfevents.1733175957.LOGTI050119.57925.0  events.out.tfevents.1733176936.LOGTI050119.87679.0  events.out.tfevents.1733177060.LOGTI050119.7549.0  events.out.tfevents.1733177076.LOGTI050119.9968.0  events.out.tfevents.1733177233.LOGTI050119.38191.0  events.out.tfevents.1733177328.LOGTI050119.56805.0  events.out.tfevents.1733177593.LOGTI050119.95326.0  events.out.tfevents.1733177626.LOGTI050119.378.0  events.out.tfevents.1733177793.LOGTI050119.22091.0  events.out.tfevents.1733177810.LOGTI050119.24397.0  events.out.tfevents.1733177959.LOGTI050119.41134.0  events.out.tfevents.1733177972.LOGTI050119.42347.0  events.out.tfevents.1733421676.AntoinePC.32198.0
tests/: conftest.py  test_manage.py
tests/board/: test_board.py
tests/nets/: test_factory.py  test_grpc.py  test_messages.py
tests/visualization/: test_application.py  test_backends.py  test_config.py  test_minio_backend.py  test_redis.py  test_visualizer.py
tools/: publish_command.py
visualization/: README.md  __init__.py  application.py  client.py  config.json  config.py  mesh_manager.py  minio_client.py  polyscope.py  redis_client.py  requirements.txt  screenshot_manager.py  visualizer.py
visualization/backend/: backend.py  factory.py  grpc.py  redis.py  websocket.py
visualization/backends/: base.py  grpc_backend.py  minio_backend.py  redis_backend.py  registry.py  websocket_backend.py
visualization/config/: config.json  config.py
visualization/storage/: factory.py  local.py  minio.py  storage.py
web/: README.md  package.json  webpack.config.js
web/public/: bundle.js  client.js  index.html
web/src/: server.js  webrtc.js
webviewer/: webpack.config.js
webviewer/public/: bundle.js  client.js  index.html
webviewer/src/: server.js  webrtc.js
(+188 files in other folders)
