[tool.poetry]
name = "serveripc"
version = "0.1.1"
description = "Elastic Simulation of Linear FEM Tetrahedra using IPC with Redis and MinIO integration."
authors = ["Antoine Boucher <antoine.boucher.1@ens.etstml.ca>"]
license = "MIT"
homepage = "https://github.com/ETSTribology/ServerIPC"
repository = "https://github.com/ETSTribology/ServerIPC"
documentation = "https://github.com/ETSTribology/ServerIPC#readme"

[tool.poetry.dependencies]
python = "^3.9"
redis = "^5.2.0"
numpy = "*"
scipy = "*"
meshio = "^5.3.5"
pbatoolkit = "^0.0.10"
libigl = "^2.5.1"
ipctk = "^1.4.0"
bson = "^0.5.10"
PyYAML = "^6.0.2"
websockets = "^14.1"
grpcio = "^1.68.0"
grpcio-tools = "^1.68.0"
jsonschema = "^4.23.0"
minio = "^7.2.12"
uvicorn = "^0.23.2"
surrealdb = "^0.4.0"
hydra-core = "^1.3.2"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"
mypy = "*"
isort = "*"
pre-commit = "*"
ruff = "*"
pytest-benchmark = "*"
asv = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-bibtex = "*"
mkdocs-jupyter = "*"
mkdocstrings = "*"
mkdocs-include-markdown-plugin = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simulation-server = "simulation.server:main"
simulation-client = "simulation.visualization.client:main"

[tool.poetry.extras]
all = [
    "pytest", 
    "black", 
    "flake8", 
    "mypy", 
    "isort", 
    "ruff", 
    "pytest-benchmark", 
    "asv", 
    "mkdocs",
    "mkdocs-material",
    "mkdocs-bibtex",
    "mkdocs-jupyter",
    "mkdocstrings",
    "mkdocs-include-markdown-plugin"
]

[tool.isort]
profile = "black"
line_length = 88
skip = [
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".asv",
    ".benchmark",
]

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
select = ["E", "F", "W", "C", "I", "B", "R", "D", "S"]
ignore = ["E501"]
line-length = 88
exclude = [
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".asv",
    ".benchmark",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info"
]